--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask
-feedparser
-requests
-gunicorn
-pytz
-urllib3
-beautifulsoup4
+Flask==3.0.3
+feedparser==6.0.11
+requests==2.32.3
+gunicorn==22.0.0
+pytz==2024.1
